# RPi5-Corporate-Recording-Station

./: Android_Memory_Management.md  Buffer_Overflow.md  Buffers.md  Cache_Architecture.md  Cache_Coherency.md  Cpp_Memory_Management.md  Custom_Memory_Allocator.md  Custom_Memory_Allocators.md  DMA_Buffer.md  Double_Buffer.md  Double_Free.md  Embedded_Memory_Management.md  FIFO_Buffer.md  False_Sharing.md  Heap_Overflow.md  How_malloc_Works_Internally.md  Kernel_Memory_Allocation.md  Linear_Buffer.md  Linux_Allocators.md  Linux_Memory_Management.md  Lock-Free_Ring_Buffer.md  MPMC_Ring_Buffer.md  MPSC_Ring_Buffer.md  Memory_Alignment.md  Memory_Barriers.md  Memory_Fundamentals.md  Memory_Mapped_IO.md  Memory_Profiling.md  Memory_management.md  NUMA_Concepts.md  Ping_Pong_Buffer.md  README.md  Ring Buffer  SPMC_Ring_Buffer.md  SPSC_Ring_Buffer.md  Scatter_Gather_Buffer.md  Smart_Pointers.md  Stack_Overflow.md  Use_After_Free.md  dynamic_memory.md  (+1 more)
FIFO/: README.md
RPi5_Corporate_Recording_Station/: Build_Procedure.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  SECURITY.md  SUPPORT.md  tree
RPi5_Corporate_Recording_Station/cmake/: options.cmake
RPi5_Corporate_Recording_Station/cmake/modules/: FindCURL.cmake  FindFFmpeg.cmake  FindHardware.cmake  FindJSONCPP.cmake  FindOpenSSL.cmake  FindWebSocket.cmake
RPi5_Corporate_Recording_Station/cmake/toolchains/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake
RPi5_Corporate_Recording_Station/config/app/: logging.conf  recording-station.conf
RPi5_Corporate_Recording_Station/config/boot/: cmdline.txt  config.override.txt  config.txt
RPi5_Corporate_Recording_Station/config/docker/: docker-compose.yml
RPi5_Corporate_Recording_Station/dependencies/: README.md
RPi5_Corporate_Recording_Station/docs/api/: rest-api.md
RPi5_Corporate_Recording_Station/hardware/assembly/: assembly-guide.md  calibration.md  troubleshooting.md
RPi5_Corporate_Recording_Station/hardware/components/: audio-input.md  bill-of-materials.csv  hdmi-capture.md  storage-expansion.md
RPi5_Corporate_Recording_Station/hardware/pinouts/: camera-pinout.md  gpio-pinout.md  i2c-devices.md  spi-devices.md  uart-pinout.md
RPi5_Corporate_Recording_Station/hardware/schematics/: enclosure.dxf
RPi5_Corporate_Recording_Station/include/config/: BuildConfig.hpp  Config.hpp  Constants.hpp
RPi5_Corporate_Recording_Station/include/public/: CloudAPI.hpp  RecordingAPI.hpp  StorageAPI.hpp
RPi5_Corporate_Recording_Station/src/: main.cpp
(+146 files in other folders)
